<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/switchlang"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="myClickHandler"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/imageView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/back2"
        android:orientation="vertical"
        android:visibility="visible"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-34dp"
        tools:layout_editor_absoluteY="171dp"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textView"
            android:layout_width="292dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="101dp"
            android:gravity="center_horizontal"
            android:text="@string/tentra"
            android:textAlignment="center"
            android:textColor="#BFFFFFFF"
            android:textSize="36sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="186dp"
            android:layout_height="82dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="122dp"
            android:layout_marginLeft="122dp"
            android:layout_marginBottom="346dp"
            android:onClick="myClickHandler"
            android:text="@string/newmatch"
            app:backgroundTint="#CD090909" />

        <Button
            android:id="@+id/button2"
            android:layout_width="186dp"
            android:layout_height="82dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="122dp"
            android:layout_marginLeft="122dp"
            android:layout_marginBottom="187dp"
            android:onClick="myClickHandler"
            android:text="@string/histo"
            app:backgroundTint="#CD090909" />

        <RadioButton
            android:id="@+id/radiolang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="252dp"
            android:layout_marginEnd="83dp"
            android:layout_marginRight="83dp"
            android:onClick="myClickHandler"
            android:text="English" />

        <RadioButton
            android:id="@+id/radiolang2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="118dp"
            android:layout_marginLeft="118dp"
            android:layout_marginTop="251dp"
            android:onClick="myClickHandler"
            android:text="Francais" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>